Fix (CSS): Better color contrast for links

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@
     --primary-text-color: #FFFFFF;
     --secondary-text-color: #000;
     --menu-selector-color: #2BA948;
-    --link-color: #005b54;
+    --link-color: #2BA948;
     --highlight-bg-color: #000;
     --highlight-text-color: #000;
     --border-code-color: #4e4e4e;
